ajout de decision

--- a/capitaine.html
+++ b/capitaine.html
@@ -66,6 +66,16 @@
 			</form>
 			<br>
 		</div>
+		
+		<div id="container4">
+		
+			<form action='/terminermission' method="post">
+				<h2>Suivi...</h2>
+				<script>decisionCapitaine();</script>
+				
+			</form>
+		
+		</div>
 
 	</div>
 	
